Wrote basic HTML structure

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 @import url('https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf');
+
+:root{
+    --create-account-color: #596D48;
+    --input-border-default: #E5E7EB;
+    --input-border-invalid: red;
+    --input-border-valid: green;
+    --input-selected: blue;
+}
+
+#logo-text{
+    font-family: "Norse Bold", 'Times New Roman', Times, serif;
+}
